<resources>
    <string name="app_name">EasyFit</string>
    <string name="app_title">Easy Fitness</string>
    <string name="splash_message">Welcome!</string>
    <string name="home">HOME</string>

    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="logout">LOGOUT</string>
    <string name="login">LOGIN</string>

    <string name="edt_sign_up">Sign Up Now!</string>
    <string name="edt_name">Enter your Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edt_sign_up_email">Type your Email</string>
    <string name="email">Email</string>
    <string name="wait">Please wait…</string>
    <string name="change_profile">Change profile pic</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="edt_sign_up_password">Type your Password</string>
    <string name="edt_sign_up_password_retype">Retype Your Password</string>
    <string name="edt_registered">Already Registered , Sign In !</string>

    <string name="edt_welcome">Welcome Back</string>
    <string name="edt_email">Enter your email</string>
    <string name="edt_password">Enter password</string>
    <string name="edt_not_registered">Not Registered Yet , Sign Up !</string>

    <string name="home_title">HOME WORKOUT</string>
    <string name="week_goal">WEEK GOAL</string>

    <string name="full_body">FULL BODY WORKOUT</string>
    <string name="lower_body">LOWER BODY WORKOUT</string>
    <string name="leg_workout">LEG WORKOUT</string>
    <string name="arm_workout">ARM WORKOUT</string>
    <string name="chest_workout">CHEST WORKOUT</string>
    <string name="shoulder_workout">SHOULDERS &amp; BACK WORKOUT</string>
    <string name="discover_more">DISCOVER</string>
    <string name="challenge">7x4 CHALLENGE</string>
    <string name="back">BACK</string>
    <string name="exit">EXIT</string>

    <string name="report_ttl">REPORT</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="calculate_Bmi">CALCULATE BMI</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="height">HEIGHT (in cm)</string>
    <string name="height_ft">HEIGHT (in Feet)</string>
    <string name="height_inch">HEIGHT (in Inch)</string>
    <string name="weight">WEIGHT (in Kg)</string>
    <string name="weight_lbs">WEIGHT (in lbs)</string>
    <string name="calculate">CALCULATE</string>
    <string name="bmi_result">YOUR BMI</string>
    <string name="normal">Normal</string>
    <string name="def">15.00</string>
    <string name="go">GO</string>
    <string name="history">VIEW HISTORY</string>
    <string name="image">Exercise Image</string>

    <string name="training">TRAINING</string>
    <string name="report">Report</string>
    <string name="discover">DISCOVER</string>
    <string name="more">More workouts</string>
    <string name="settings">SETTINGS</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="logged_in">You logged in as</string>

    <string name="complete_exercises">EXERCISES COMPLETED</string>
    <string name="no_history">NO DATA AVAILABLE. Please, Perform Workout to View History.</string>
    <string name="date">DATE</string>
    <string name="num">1</string>
    <string name="num_thirty">30</string>
    <string name="num_ten">10</string>
    <string name="get_ready">GET READY FOR</string>
    <string name="new_exercise">New Exercise Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE : </string>
    <string name="confirm_exit">Are you sure?</string>
    <string name="exit_message">This will stop your workout, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

</resources>