<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExerciseActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm_exit"
        android:textColor="#130909"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/exit_message"
        android:textColor="#130909"
        android:textSize="16sp"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="#160fdd"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/yes"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#160fdd"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/no"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>
            
        </LinearLayout>
</LinearLayout>